# usb-insight-hub-py

./: BOS_DESCRIPTOR.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
usb_insight_hub_host/: __init__.py  devinfo.py  hub.py  main.py  port.py  renderer.py  screen.py  usbutil.py
usb_insight_hub_host/screens/: __init__.py  base.py  image.py  vid_pid.py
