[project]
name = "usb-insight-hub-host"
version = "0.1.0"
description = "USB insight hub host app for Linux"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyserial>=3.5",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["usb_insight_hub_host"]

[project.scripts]
usb-insight-hub-host = "usb_insight_hub_host.main:main"
